[tool.poetry]
name = "space-invaders-1"
version = "0.1.0"
description = ""
authors = ["Aidan Roessler <s.aidanro@durangoschools.org>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^1.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
